test/fail/unexpected-eos.rnp
let a
---
 --> fail/unexpected-eos.rnp:1:6
  |
1 | let a
  |      ^ Unexpected end of source
  |
